--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
  <nav>
   <div class="logo">
     <a href="#top">
-      <img src="coffeeLogo.png" alt="The Coffee Mugg Logo" style="height: 50px; vertical-align: middle;">
+      <img src="https://res.cloudinary.com/dzhvdoifb/image/upload/v1756591489/coffeeLogo_irwlyr.png" alt="The Coffee Mugg Logo" style="height: 50px; vertical-align: middle;">
     </a>
   </div>
 
