--- a/rewards.html
+++ b/rewards.html
@@ -266,11 +266,11 @@
             <div class="icon">📜</div>
             <span>Menu</span>
         </a>
-        <a class="nav-item" href="rewards.html">
+        <a class="nav-item active" href="rewards.html">
             <div class="icon">🏆</div>
             <span>Rewards</span>
         </a>
-        <a class="nav-item active" href="menu.html">
+        <a class="nav-item" href="menu.html">
             <div class="icon">🛒<span id="cartBadge" class="cart-badge">0</span></div>
             <span>Order</span>
         </a>
