--- a/menu.html
+++ b/menu.html
@@ -564,7 +564,7 @@
     <!-- The new, PWA-like bottom navigation -->
     <nav class="pwa-bottom-nav">
         <!-- Themed icons for a magical setting -->
-        <a class="nav-item" href="index.html">
+        <a class="nav-item active" href="index.html">
             <div class="icon">🏰</div>
             <span>Home</span>
         </a>
@@ -576,7 +576,7 @@
             <div class="icon">🏆</div>
             <span>Rewards</span>
         </a>
-        <a class="nav-item active" href="menu.html">
+        <a class="nav-item" href="menu.html">
             <div class="icon">🛒<span id="cartBadge" class="cart-badge">0</span></div>
             <span>Order</span>
         </a>
