--- a/menu.html
+++ b/menu.html
@@ -566,11 +566,11 @@
     <!-- The new, PWA-like bottom navigation -->
     <nav class="pwa-bottom-nav">
         <!-- Themed icons for a magical setting -->
-        <a class="nav-item active" href="index.html">
+        <a class="nav-item" href="index.html">
             <div class="icon">🏰</div>
             <span>Home</span>
         </a>
-        <a class="nav-item" href="menu.html">
+        <a class="nav-item active" href="menu.html">
             <div class="icon">📜</div>
             <span>Menu</span>
         </a>
