--- a/menu.html
+++ b/menu.html
@@ -570,7 +570,7 @@
             <div class="icon">🏰</div>
             <span>Home</span>
         </a>
-        <a class="nav-item active" href="menu.html">
+        <a class="nav-item" href="#">
             <div class="icon">📜</div>
             <span>Menu</span>
         </a>
@@ -578,7 +578,7 @@
             <div class="icon">🏆</div>
             <span>Rewards</span>
         </a>
-        <a class="nav-item" href="menu.html">
+        <a class="nav-item active" href="menu.html">
             <div class="icon">🛒<span id="cartBadge" class="cart-badge">0</span></div>
             <span>Order</span>
         </a>
