--- a/rewards.html
+++ b/rewards.html
@@ -262,7 +262,7 @@
             <div class="icon">🏰</div>
             <span>Home</span>
         </a>
-        <a class="nav-item" href="menu.html">
+        <a class="nav-item" href="#">
             <div class="icon">📜</div>
             <span>Menu</span>
         </a>
