--- a/rewards.html
+++ b/rewards.html
@@ -6,6 +6,8 @@
     <title>The Coffee Mugg Rewards</title>
     <!-- Links the manifest file, which is crucial for PWA installation -->
     <link rel="manifest" href="manifest.json">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://res.cloudinary.com/dzhvdoifb/image/upload/v1756591489/coffeeLogo_irwlyr.png">
+<link rel="apple-touch-icon" href="https://res.cloudinary.com/dzhvdoifb/image/upload/v1756591489/coffeeLogo_irwlyr.png">
     <style>
         /* Color variables and base styles */
         :root {
