--- a/index.html
+++ b/index.html
@@ -278,11 +278,11 @@
      <!-- The new, PWA-like bottom navigation -->
     <nav class="pwa-bottom-nav">
         <!-- Themed icons for a magical setting -->
-        <a class="nav-item" href="index.html">
+        <a class="nav-item active" href="index.html">
             <div class="icon">🏰</div>
             <span>Home</span>
         </a>
-        <a class="nav-item" href="menu.html">
+        <a class="nav-item" href="#">
             <div class="icon">📜</div>
             <span>Menu</span>
         </a>
@@ -290,7 +290,7 @@
             <div class="icon">🏆</div>
             <span>Rewards</span>
         </a>
-        <a class="nav-item active" href="menu.html">
+        <a class="nav-item " href="menu.html">
             <div class="icon">🛒<span id="cartBadge" class="cart-badge">0</span></div>
             <span>Order</span>
         </a>
