--- a/menu.html
+++ b/menu.html
@@ -570,7 +570,7 @@
             <div class="icon">🏰</div>
             <span>Home</span>
         </a>
-        <a class="nav-item" href="#">
+        <a class="nav-item" href="menu.html">
             <div class="icon">📜</div>
             <span>Menu</span>
         </a>
