--- a/menu.html
+++ b/menu.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"/>
     <title>The Coffee Mugg Order</title>
     <!-- Links the manifest file, which is crucial for PWA installation -->
     <link rel="manifest" href="manifest.json">
