--- a/index.html
+++ b/index.html
@@ -36,15 +36,15 @@
             text-decoration: none;
         }
 
-        body {
-            padding-bottom: 70px; /* Space for the fixed bottom nav */
+       body {
+            padding-bottom: calc(70px + env(safe-area-inset-bottom));
         }
 
         /* The new, PWA-like bottom navigation */
         .pwa-bottom-nav {
             background-color: var(--darker-base);
             color: var(--gold);
-            padding: 10px 20px;
+            padding: 10px 20px calc(10px + env(safe-area-inset-bottom));
             display: flex;
             align-items: center;
             justify-content: space-around;
