--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         }
 
         /* The new, PWA-like bottom navigation */
-        .pwa-bottom-nav {
+       .pwa-bottom-nav {
             background-color: var(--darker-base);
             color: var(--gold);
             padding: 10px 20px calc(10px + env(safe-area-inset-bottom));
@@ -52,7 +52,7 @@
             bottom: 0;
             left: 0;
             width: 100%;
-            height: 70px;
+            height: calc(70px + env(safe-area-inset-bottom)); /* <-- update this line */
             z-index: 1000;
             box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.5);
         }
