--- a/rewards.html
+++ b/rewards.html
@@ -37,14 +37,14 @@
         }
 
         body {
-            padding-bottom: 70px; /* Space for the fixed bottom nav */
+            padding-bottom:70px;
         }
 
         /* The new, PWA-like bottom navigation */
         .pwa-bottom-nav {
             background-color: var(--darker-base);
             color: var(--gold);
-            padding: 10px 20px;
+            padding: 10px 20px 40px;
             display: flex;
             align-items: center;
             justify-content: space-around;
@@ -52,7 +52,6 @@
             bottom: 0;
             left: 0;
             width: 100%;
-            height: 70px;
             z-index: 1000;
             box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.5);
         }
